@@ -10,12 +10,15 @@ package org.dita.dost.module;
 
 import static java.util.Collections.emptyMap;
 import static org.dita.dost.util.Constants.*;
+import static org.dita.dost.util.DitaUtils.isDitaFormat;
+import static org.dita.dost.util.DitaUtils.isDitaMap;
 import static org.dita.dost.util.Job.USER_INPUT_FILE_LIST_FILE;
 import static org.dita.dost.util.XMLUtils.toErrorReporter;
 
 import com.google.common.annotations.VisibleForTesting;
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
 import java.nio.file.Files;
 import java.util.*;
@@ -32,6 +35,7 @@ import net.sf.saxon.trans.UncheckedXPathException;
 import org.apache.commons.io.FileUtils;
 import org.dita.dost.exception.DITAOTException;
 import org.dita.dost.pipeline.AbstractPipelineOutput;
+import org.dita.dost.util.DitaUtils;
 import org.dita.dost.util.Job;
 import org.dita.dost.util.Job.FileInfo;
 import org.dita.dost.util.URLUtils;
@@ -52,7 +56,7 @@ public class CleanPreprocessModule extends AbstractPipelineModuleImpl {
 
   private static final String PARAM_USE_RESULT_FILENAME = "use-result-filename";
 
-  private final LinkFilter filter = new LinkFilter();
+  private final LinkFilter linkFilter = new LinkFilter();
   private final MapCleanFilter mapFilter = new MapCleanFilter();
   private final TopicCleanFilter topicFilter = new TopicCleanFilter();
 
@@ -94,15 +98,20 @@ public class CleanPreprocessModule extends AbstractPipelineModuleImpl {
         .map(c -> {
           try {
             final Class<RewriteRule> cls = (Class<RewriteRule>) Class.forName(c);
-            return cls.newInstance();
-          } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+            return cls.getDeclaredConstructor().newInstance();
+          } catch (
+            ClassNotFoundException
+            | InstantiationException
+            | IllegalAccessException
+            | InvocationTargetException
+            | NoSuchMethodException e
+          ) {
             throw new RuntimeException(e);
           }
         })
         .orElse(null);
 
-    filter.setLogger(logger);
-
+    linkFilter.setLogger(logger);
     mapFilter.setLogger(logger);
     topicFilter.setLogger(logger);
   }
@@ -110,58 +119,34 @@ public class CleanPreprocessModule extends AbstractPipelineModuleImpl {
   @Override
   public AbstractPipelineOutput execute(final Map<String, String> input) throws DITAOTException {
     init(input);
-    final URI base = getBaseDir();
+    final URI base = job.getResultBaseDir();
     if (useResultFilename) {
-      // collect and relativize result
-      final Collection<FileInfo> original = job
-        .getFileInfo()
-        .stream()
-        .filter(fi -> fi.result != null)
-        .map(fi -> FileInfo.builder(fi).result(base.relativize(fi.result)).build())
-        .collect(Collectors.toList());
-      original.forEach(fi -> job.remove(fi));
-      // rewrite results
-      final Collection<FileInfo> rewritten = rewrite(original);
-      // move temp files and update links
-      final Job tempJob = new Job(job, emptyMap(), rewritten);
-      filter.setJob(tempJob);
-      mapFilter.setJob(tempJob);
-      topicFilter.setJob(tempJob);
-      for (final FileInfo fi : rewritten) {
-        try {
-          assert !fi.result.isAbsolute();
-          if (fi.format != null && (fi.format.equals("coderef") || fi.format.equals("image"))) {
-            logger.debug("Skip format " + fi.format);
-          } else {
-            final File srcFile = new File(job.tempDirURI.resolve(fi.uri));
-            if (job.getStore().exists(srcFile.toURI())) {
-              final File destFile = new File(job.tempDirURI.resolve(fi.result));
-              final List<XMLFilter> processingPipe = getProcessingPipe(fi, srcFile, destFile);
-              if (!processingPipe.isEmpty()) {
-                logger.info("Processing " + srcFile.toURI() + " to " + destFile.toURI());
-                job.getStore().transform(srcFile.toURI(), destFile.toURI(), processingPipe);
-                if (!srcFile.equals(destFile)) {
-                  logger.debug("Deleting " + srcFile.toURI());
-                  FileUtils.deleteQuietly(srcFile);
-                }
-              } else if (!srcFile.equals(destFile)) {
-                logger.info("Moving " + srcFile.toURI() + " to " + destFile.toURI());
-                FileUtils.moveFile(srcFile, destFile);
-              }
-            }
-          }
-          final FileInfo res = FileInfo.builder(fi).uri(fi.result).result(base.resolve(fi.result)).build();
-          job.add(res);
-        } catch (final IOException e) {
-          logger.error("Failed to clean " + job.tempDirURI.resolve(fi.uri) + ": " + e.getMessage(), e);
-        }
-      }
+      final Collection<FileInfo> original = extractFileInfos(base);
+      final Collection<FileInfo> rewritten = rewriteFileInfos(original);
+      moveFiles(rewritten, base);
     }
 
     job.setProperty("uplevels", getUplevels(base));
     job.setInputDir(base);
 
-    // start map
+    writeInputMapList();
+
+    try {
+      job.write();
+    } catch (IOException e) {
+      throw new DITAOTException();
+    }
+
+    return null;
+  }
+
+  /**
+   * Write legacy path file for input map.
+   *
+   * @deprecated path files are a legacy feature retained for backwards compatibility.
+   */
+  @Deprecated
+  private void writeInputMapList() {
     final FileInfo start = job.getFileInfo(f -> f.isInput).iterator().next();
     if (start != null) {
       job.setInputMap(start.uri);
@@ -173,17 +158,68 @@ public class CleanPreprocessModule extends AbstractPipelineModuleImpl {
         throw new RuntimeException(e);
       }
     }
-
-    try {
-      job.write();
-    } catch (IOException e) {
-      throw new DITAOTException();
-    }
-
-    return null;
   }
 
-  private Collection<FileInfo> rewrite(final Collection<FileInfo> fis) throws DITAOTException {
+  /**
+   * Move temp files and update links.
+   */
+  private void moveFiles(Collection<FileInfo> rewritten, URI base) throws DITAOTException {
+    final Job tempJob = new Job(job, emptyMap(), rewritten);
+    linkFilter.setJob(tempJob);
+    mapFilter.setJob(tempJob);
+    topicFilter.setJob(tempJob);
+
+    for (final FileInfo fi : rewritten) {
+      try {
+        assert !fi.result.isAbsolute();
+        if (fi.format != null && (fi.format.equals("coderef") || fi.format.equals("image"))) {
+          logger.debug("Skip format " + fi.format);
+        } else {
+          final File srcFile = new File(job.tempDirURI.resolve(fi.uri));
+          if (job.getStore().exists(srcFile.toURI())) {
+            final File destFile = new File(job.tempDirURI.resolve(fi.result));
+            final List<XMLFilter> processingPipe = getProcessingPipe(fi, srcFile, destFile);
+            if (!processingPipe.isEmpty()) {
+              logger.info("Processing " + srcFile.toURI() + " to " + destFile.toURI());
+              job.getStore().transform(srcFile.toURI(), destFile.toURI(), processingPipe);
+              if (!srcFile.equals(destFile)) {
+                logger.debug("Deleting " + srcFile.toURI());
+                FileUtils.deleteQuietly(srcFile);
+              }
+            } else if (!srcFile.equals(destFile)) {
+              logger.info("Moving " + srcFile.toURI() + " to " + destFile.toURI());
+              FileUtils.moveFile(srcFile, destFile);
+            }
+          }
+        }
+        final FileInfo res = FileInfo.builder(fi).uri(fi.result).result(base.resolve(fi.result)).build();
+        job.add(res);
+      } catch (final IOException e) {
+        logger.error("Failed to clean " + job.tempDirURI.resolve(fi.uri) + ": " + e.getMessage(), e);
+      }
+    }
+  }
+
+  /**
+   * Collect FileInfos and remove from job.
+   * @param base comman base directory
+   */
+  private Collection<FileInfo> extractFileInfos(URI base) {
+    final Collection<FileInfo> original = job
+      .getFileInfo()
+      .stream()
+      .filter(fi -> fi.result != null)
+      .map(fi -> FileInfo.builder(fi).result(base.relativize(fi.result)).build())
+      .collect(Collectors.toList());
+    original.forEach(fi -> job.remove(fi));
+    return original;
+  }
+
+  /**
+   * Rewrites file path metadata. Supports both XSLT and Java-based rewrite rules.
+   * @throws DITAOTException  if an error occurs during the rewriting process
+   */
+  private Collection<FileInfo> rewriteFileInfos(final Collection<FileInfo> fis) throws DITAOTException {
     if (rewriteClass != null) {
       return rewriteClass.rewrite(fis);
     }
@@ -221,88 +257,18 @@ public class CleanPreprocessModule extends AbstractPipelineModuleImpl {
     return IntStream.range(0, count).boxed().map(i -> "../").collect(Collectors.joining(""));
   }
 
-  /**
-   * Get common base directory for all files
-   */
-  @VisibleForTesting
-  URI getBaseDir() {
-    final Collection<FileInfo> fis = job.getFileInfo();
-    URI baseDir = job.getFileInfo(fi -> fi.isInput).iterator().next().result.resolve(".");
-    for (final FileInfo fi : fis) {
-      if (fi.result != null && !fi.isResourceOnly) {
-        final URI res = fi.result.resolve(".");
-        baseDir = Optional.ofNullable(getCommonBase(baseDir, res)).orElse(baseDir);
-      }
-    }
-
-    return baseDir;
-  }
-
-  @VisibleForTesting
-  URI getCommonBase(final URI left, final URI right) {
-    assert left.isAbsolute();
-    assert right.isAbsolute();
-    if (!left.getScheme().equals(right.getScheme())) {
-      return null;
-    }
-    final URI l = left.resolve(".");
-    final URI r = right.resolve(".");
-    final String lp = l.getPath();
-    final String rp = r.getPath();
-    if (lp.equals(rp)) {
-      return l;
-    }
-    if (lp.startsWith(rp)) {
-      return r;
-    }
-    if (rp.startsWith(lp)) {
-      return l;
-    }
-    final String[] la = left.getPath().split("/");
-    final String[] ra = right.getPath().split("/");
-    int i = 0;
-    final int len = Math.min(la.length, ra.length);
-    for (; i < len; i++) {
-      if (la[i].equals(ra[i])) {
-        //
-      } else {
-        final int common = Math.max(0, i);
-        final List<String> commons = Arrays.asList(la).subList(0, common);
-        if (OS_NAME.toLowerCase().contains(OS_NAME_WINDOWS) && commons.size() <= 1) {
-          return null;
-        } else {
-          final String path = String.join("/", commons) + "/";
-          return URLUtils.setPath(left, path);
-        }
-      }
-    }
-    return null;
-  }
-
-  private void init() {
-    filter.setJob(job);
-    filter.setLogger(logger);
-
-    mapFilter.setJob(job);
-    mapFilter.setLogger(logger);
-
-    topicFilter.setJob(job);
-    topicFilter.setLogger(logger);
-  }
-
   private List<XMLFilter> getProcessingPipe(final FileInfo fi, final File srcFile, final File destFile) {
     final List<XMLFilter> res = new ArrayList<>();
-
-    if (fi.format == null || fi.format.equals(ATTR_FORMAT_VALUE_DITA) || fi.format.equals(ATTR_FORMAT_VALUE_DITAMAP)) {
-      filter.setCurrentFile(srcFile.toURI());
-      filter.setDestFile(destFile.toURI());
-      res.add(filter);
+    if (isDitaFormat(fi) || isDitaMap(fi)) {
+      linkFilter.setCurrentFile(srcFile.toURI());
+      linkFilter.setDestFile(destFile.toURI());
+      res.add(linkFilter);
     }
 
-    if (fi.format == null || fi.format.equals(ATTR_FORMAT_VALUE_DITA)) {
+    if (isDitaFormat(fi)) {
       topicFilter.setFileInfo(fi);
       res.add(topicFilter);
-    } else if (fi.format.equals(ATTR_FORMAT_VALUE_DITAMAP)) {
+    } else if (isDitaMap(fi)) {
       res.add(mapFilter);
     }
 
